# sparkjobtest

./: .gitignore  Makefile  pyproject.toml
sparkjobtest/: job.py
sparkjobtest/model/: batch.py  cbor_schema.py  graph.py  manifest.py  value.py
sparkjobtest/ontology/: bindings.py  rdf_common.py  rdf_prefix.py
sparkjobtest/util/: config.py  error.py  fn.py  logger.py  monad.py  session.py  tracer.py
tests/: conftest.py  test_sparkjobtest.py
tests/fixtures/: generated_graph.json  graph.json  test1.csv  test2.csv
tests/job/: test_job.py
tests/shared/: __init__.py  db_setup.py  graph.py  spark.py
tests/test_job/: test_job.py
tests/test_model/: test_graph.py
